# bluepill_hid_infrared

./: .gitmodules  CMakeLists.txt  actions.c  actions.h  hid_functions.c  hid_functions.h  hid_ir.cbp  main.c  mouse_actions.c  mouse_actions.h  nec_infrared.c  nec_infrared.h  stm32f103.ld  syscall.c
